# AgentOrchestration

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
src/agent/: __init__.py  executor.py  registry.py  runtime.py  sandbox.py
src/api/: __init__.py  middleware.py  routes.py  server.py
src/cli/: __init__.py  main.py
src/common/: __init__.py  config.py  logging.py  metrics.py
src/contracts/: __init__.py
src/orchestrator/: __init__.py  engine.py  scheduler.py  workflow.py
src/sdk/: __init__.py  agent.py  client.py  decorators.py
tests/: __init__.py  test_agent_registry.py  test_config.py  test_metrics.py  test_scheduler.py
