[project]
name = "agent-orchestrator"
version = "2.4.1"
description = "Enterprise Agent Orchestration Platform"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ao = "src.cli.main:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

# 2019-01-04T18:40:00 update

# 2019-03-18T10:15:27 update

# 2019-04-15T14:01:53 update

# 2019-05-06T15:24:57 update

# 2019-07-07T08:39:44 update

# 2019-07-11T20:51:32 update

# 2019-07-30T08:41:11 update
